--- a/config/locales/admin/tests/tests.en.yml
+++ b/config/locales/admin/tests/tests.en.yml
@@ -80,5 +80,6 @@ en:
         delete_question: "Delete"
         delete_question_confirm: "Are you sure you want to delete this question?"
         no_questions: "There are no questions in this test."
+        question_type_label: "Question Type:"
       authenticate_admin:
         not_authorized: "You are not authorized to access this page!"
