Rspec test for test_controller

--- a/config/locales/active_record/activerecord.en.yml
+++ b/config/locales/active_record/activerecord.en.yml
@@ -55,3 +55,4 @@ en:
               inclusion: "Word type invalid"
       messages:
         inclusion: "Not in the list"
+        record_invalid: "Invalid data"
