--- a/config/locales/devise/devise.vi.yml
+++ b/config/locales/devise/devise.vi.yml
@@ -50,6 +50,16 @@ vi:
       signed_in: "Đăng nhập thành công."
       signed_out: "Đăng xuất thành công."
       already_signed_out: "Đăng xuất thành công."
+      new:
+        log_in: "Đăng nhập"
+        email: "Email"
+        password: "Mật khẩu"
+        remember_me: "Ghi nhớ đăng nhập"
+        new_user?: "Bạn chưa có tài khoản? "
+        sign_up_now!: "Đăng ký ngay!"
+        or: "hoặc"
+        google_logo_alt: "Logo Google"
+        continue_with_google: "Tiếp tục với Google"
     unlocks:
       send_instructions: "Bạn sẽ nhận được email hướng dẫn cách mở khóa tài khoản trong vài phút."
       send_paranoid_instructions: "Nếu tài khoản của bạn tồn tại, bạn sẽ nhận được email hướng dẫn cách mở khóa trong vài phút."
@@ -77,3 +87,5 @@ vi:
           male: "Nam"
           female: "Nữ"
           other: "Khác"
+  admin:
+    access_denied: "Bạn không có quyền truy cập vào trang quản trị."
