--- a/config/locales/base/base.vi.yml
+++ b/config/locales/base/base.vi.yml
@@ -103,6 +103,7 @@ vi:
       header:
         one: "Biểu mẫu chứa 1 lỗi"
         other: "Biểu mẫu chứa %{count} lỗi"
+    access_denied: "Bạn không có quyền truy cập chức năng này."
 
   time:
     formats:
